[gd_scene load_steps=58 format=3 uid="uid://d0jou4iuydvkg"]

[ext_resource type="Shader" uid="uid://nerkcvsgkina" path="res://Scenes/player/player_glowing.gdshader" id="1_am21h"]
[ext_resource type="Script" uid="uid://cxkd8yvl5fi5l" path="res://Scenes/player/player.gd" id="1_wodsf"]
[gd_scene load_steps=121 format=3 uid="uid://d0jou4iuydvkg"]

[ext_resource type="Script" uid="uid://cxkd8yvl5fi5l" path="res://scenes/player/player.gd" id="1_wodsf"]
[ext_resource type="Texture2D" uid="uid://dnt7n2db610ps" path="res://assets/foxy/fox_hat_blade/fox_atk_1.png" id="2_6cv16"]
[ext_resource type="Texture2D" uid="uid://bkabwrpxdc7cc" path="res://assets/foxy/fox_hat_blade/fox_atk_2.png" id="3_j4nxn"]
[ext_resource type="Texture2D" uid="uid://byd3g4nnxwfcq" path="res://assets/foxy/fox_hat_blade/fox_atk_3.png" id="4_28m0y"]
[ext_resource type="Texture2D" uid="uid://m4di78taixns" path="res://assets/foxy/fox_hat/fox_defeat_1.png" id="4_c35mf"]
[ext_resource type="Texture2D" uid="uid://b6jgthsrynctr" path="res://assets/foxy/fox_hat/fox_defeat_2.png" id="5_65viv"]
[ext_resource type="Texture2D" uid="uid://fii540ugfj5n" path="res://assets/foxy/fox_hat/fox_defeat_3.png" id="6_x7c3f"]
[ext_resource type="Texture2D" uid="uid://6gko14qsmmw4" path="res://assets/foxy/fox_hat/fox_jump_2.png" id="7_bjvpn"]
[ext_resource type="Texture2D" uid="uid://yom7r0j05to2" path="res://assets/foxy/fox_hat/fox_hit_1.png" id="8_s7qer"]
[ext_resource type="Texture2D" uid="uid://ck8edmupc3gra" path="res://assets/foxy/fox_hat/fox_hit_2.png" id="9_g4c7l"]
[ext_resource type="Texture2D" uid="uid://bqh3qhrimo17x" path="res://assets/foxy/fox_hat/fox_hit_3.png" id="10_knn7v"]
[ext_resource type="Texture2D" uid="uid://b2iyrbygs0b7c" path="res://assets/foxy/fox_hat/fox_idle_1.png" id="11_7pqkx"]
[ext_resource type="Texture2D" uid="uid://c8uke6n7xj17g" path="res://assets/foxy/fox_hat/fox_idle_2.png" id="12_uw77l"]
[ext_resource type="Texture2D" uid="uid://b7ko4rnci3koo" path="res://assets/foxy/fox_hat/fox_jump_1.png" id="13_rptt4"]
[ext_resource type="Texture2D" uid="uid://cseha0dkj5lfj" path="res://assets/foxy/fox_hat/fox_walk_1.png" id="14_r7pn3"]
[ext_resource type="Texture2D" uid="uid://3g5hdrfwcd2c" path="res://assets/foxy/fox_hat/fox_walk_2.png" id="15_b8hi5"]
[ext_resource type="Texture2D" uid="uid://cg0s41812vukj" path="res://assets/foxy/fox_hat/fox_walk_3.png" id="16_2uvqg"]
[ext_resource type="Texture2D" uid="uid://8u26ji11yaua" path="res://assets/foxy/fox_hat/fox_walk_4.png" id="17_1s1yo"]
[ext_resource type="Script" uid="uid://ccpqtop0obu2w" path="res://scripts/hit_area_2d.gd" id="17_ioxgp"]
[ext_resource type="Texture2D" uid="uid://cp2ag6s67gj73" path="res://assets/foxy/fox_hat_blade/fox_defeat_1.png" id="19_genst"]
[ext_resource type="Script" uid="uid://li1jbn65pf6r" path="res://scenes/player/states/hurt.gd" id="20_8ydkj"]
[ext_resource type="Texture2D" uid="uid://cx3p62gjf57ep" path="res://assets/foxy/fox_hat_blade/fox_defeat_2.png" id="20_niom3"]
[ext_resource type="Texture2D" uid="uid://blvo22k8hckk0" path="res://assets/foxy/fox_hat_blade/fox_defeat_3.png" id="21_ttakn"]
[ext_resource type="Texture2D" uid="uid://bv5er34emc8g1" path="res://assets/foxy/fox_hat_blade/fox_jump_2.png" id="22_rw8a5"]
[ext_resource type="Script" uid="uid://21al21syvgln" path="res://scenes/player/states/dead.gd" id="22_yj68g"]
[ext_resource type="Texture2D" uid="uid://bh18dgm068hhf" path="res://assets/foxy/fox_hat_blade/fox_hit_1.png" id="23_iwuka"]
[ext_resource type="Texture2D" uid="uid://gg8v11cck4hu" path="res://assets/foxy/fox_hat_blade/fox_hit_2.png" id="24_hyqqp"]
[ext_resource type="Texture2D" uid="uid://cbfcke2rlqmtw" path="res://assets/foxy/fox_hat_blade/fox_hit_3.png" id="25_ds1xl"]
[ext_resource type="Texture2D" uid="uid://cv1omqfyyi3aj" path="res://assets/foxy/fox_hat_blade/fox_idle_1.png" id="26_1u1sw"]
[ext_resource type="Texture2D" uid="uid://d1wqqv8lwu0w0" path="res://assets/foxy/fox_hat_blade/fox_idle_2.png" id="27_2t3bg"]
[ext_resource type="Texture2D" uid="uid://cjob2r8khe2fs" path="res://assets/foxy/fox_hat_blade/fox_jump_1.png" id="28_jrbya"]
[ext_resource type="Texture2D" uid="uid://f0k2ocqkmcc2" path="res://assets/foxy/fox_hat_blade/fox_jump_atk_1.png" id="29_ahqnk"]
[ext_resource type="Texture2D" uid="uid://c8k8kn11ppnjp" path="res://assets/foxy/fox_hat_blade/fox_jump_atk_2.png" id="30_vb1ce"]
[ext_resource type="Texture2D" uid="uid://dgis3lall2gw3" path="res://assets/foxy/fox_hat_blade/fox_walk_1.png" id="31_0ncpa"]
[ext_resource type="Texture2D" uid="uid://cr8a68nw3dww1" path="res://assets/foxy/fox_hat_blade/fox_walk_2.png" id="32_upxxc"]
[ext_resource type="Texture2D" uid="uid://d0jfmp24jrfcy" path="res://assets/foxy/fox_hat_blade/fox_walk_3.png" id="33_ln3h3"]
[ext_resource type="Texture2D" uid="uid://ce35c6mn7dcok" path="res://assets/foxy/fox_hat_blade/fox_walk_4.png" id="34_uygh0"]
[ext_resource type="Script" uid="uid://csu2b21cwchqw" path="res://scripts/hurt_area_2d.gd" id="35_o1e43"]
[ext_resource type="Script" uid="uid://b2o007yxvk7qa" path="res://scripts/node2d_factory.gd" id="37_iwuka"]
[ext_resource type="PackedScene" uid="uid://dtvvbmgptni3i" path="res://scenes/player/jump_fx.tscn" id="37_k00gf"]
[ext_resource type="PackedScene" uid="uid://b4j3dswx4n2cy" path="res://scenes/player/walk_fx.tscn" id="38_48wxx"]
[ext_resource type="PackedScene" uid="uid://cs0qvp0xeh0tn" path="res://scenes/blade/blade_projectile.tscn" id="38_hyqqp"]
[ext_resource type="Script" uid="uid://dp3lba7mnpcyn" path="res://scenes/player/states/idle.gd" id="39_art4l"]
[ext_resource type="Script" uid="uid://bn74l4ngryo6x" path="res://scenes/player/states/run.gd" id="40_fjxoa"]
[ext_resource type="Texture2D" uid="uid://xdcxe6uvlifs" path="res://assets/skills/fire/1/1_0.png" id="40_kfile"]
[ext_resource type="Script" uid="uid://di3w8xw7t025o" path="res://scenes/player/states/jump.gd" id="41_gswnw"]
[ext_resource type="Texture2D" uid="uid://duvlywpw1xjt4" path="res://assets/skills/fire/1/1_1.png" id="41_pkjeu"]
[ext_resource type="Texture2D" uid="uid://ct6hyihrvhgtk" path="res://assets/skills/fire/1/1_2.png" id="42_0epl4"]
[ext_resource type="Script" uid="uid://caxtbpdyga1ay" path="res://scenes/player/states/fall.gd" id="42_xcnuv"]
[ext_resource type="Texture2D" uid="uid://mb251y3nshq7" path="res://assets/skills/fire/1/1_3.png" id="43_3r8w6"]
[ext_resource type="Script" uid="uid://d3tdm7uhl16p7" path="res://scenes/player/states/attack.gd" id="43_niom3"]
[ext_resource type="Texture2D" uid="uid://ca2lbchp3k0ry" path="res://assets/skills/fire/1/1_4.png" id="44_i816j"]
[ext_resource type="Script" uid="uid://blp1td1nitt5f" path="res://scenes/player/states/jump_attack.gd" id="44_ttakn"]
[ext_resource type="Texture2D" uid="uid://dd3dktjd5lq1r" path="res://assets/skills/fire/1/1_5.png" id="45_laqvq"]
[ext_resource type="Script" uid="uid://ke058dpyk512" path="res://scenes/player/states/throw_attack.gd" id="45_rw8a5"]
[ext_resource type="Texture2D" uid="uid://diqrftliy57su" path="res://assets/skills/fire/1/1_6.png" id="46_aq51r"]
[ext_resource type="Texture2D" uid="uid://djwn54pv02ofb" path="res://assets/skills/fire/1/1_7.png" id="47_q3ejk"]
[ext_resource type="Texture2D" uid="uid://bvk80trdfk2a" path="res://assets/skills/fire/1/1_8.png" id="48_2dxln"]
[ext_resource type="Texture2D" uid="uid://dysog504iur3w" path="res://assets/skills/fire/1/1_9.png" id="49_gsldg"]
[ext_resource type="Texture2D" uid="uid://bgslm74gi7xvy" path="res://assets/skills/fire/1/1_10.png" id="50_rrrpt"]
[ext_resource type="Script" uid="uid://c3c1jskkab60p" path="res://scenes/player/cast_spell.gd" id="51_jrbya"]
[ext_resource type="Texture2D" uid="uid://bd2q8bout88y4" path="res://assets/skills/fire/1/1_11.png" id="51_us45u"]
[ext_resource type="Texture2D" uid="uid://bwvp5yco87t3p" path="res://assets/skills/fire/1/1_12.png" id="52_wvv85"]
[ext_resource type="Texture2D" uid="uid://5o0gocasuqwl" path="res://assets/skills/fire/1/1_13.png" id="53_hxu4r"]
[ext_resource type="Texture2D" uid="uid://y715x8274yq8" path="res://assets/skills/fire/1/1_14.png" id="54_i6dto"]
[ext_resource type="Texture2D" uid="uid://cu5pam47uj71n" path="res://assets/skills/fire/1/1_15.png" id="55_4d8j4"]
[ext_resource type="Texture2D" uid="uid://bhwkk46dnpkdj" path="res://assets/skills/fire/1/1_16.png" id="56_s27sh"]
[ext_resource type="Texture2D" uid="uid://c3jjs8o0lmnip" path="res://assets/skills/fire/1/1_17.png" id="57_1vi86"]
[ext_resource type="Texture2D" uid="uid://btawe25v58jf5" path="res://assets/skills/fire/1/1_18.png" id="58_beayq"]
[ext_resource type="Texture2D" uid="uid://cyodvsoq6acxu" path="res://assets/skills/fire/1/1_19.png" id="59_12j61"]
[ext_resource type="Texture2D" uid="uid://83gdb6o42vaq" path="res://assets/skills/fire/1/1_20.png" id="60_kthys"]
[ext_resource type="Texture2D" uid="uid://btj75vjrgr80b" path="res://assets/skills/fire/1/1_21.png" id="61_48o5h"]
[ext_resource type="Texture2D" uid="uid://cntby5yb7o5g3" path="res://assets/skills/fire/1/1_22.png" id="62_xum3i"]
[ext_resource type="Texture2D" uid="uid://cp0kvxxmml8an" path="res://assets/skills/fire/1/1_23.png" id="63_ct4wv"]
[ext_resource type="Texture2D" uid="uid://3v4f62n5bxv5" path="res://assets/skills/fire/1/1_24.png" id="64_teg5g"]
[ext_resource type="Texture2D" uid="uid://bu0remm874ojd" path="res://assets/skills/fire/1/1_25.png" id="65_vcxk4"]
[ext_resource type="Texture2D" uid="uid://d3spre272g8y0" path="res://assets/skills/fire/1/1_26.png" id="66_x6bw1"]
[ext_resource type="Texture2D" uid="uid://dp7nl4ix3ytfw" path="res://assets/skills/fire/1/1_27.png" id="67_e1bru"]
[ext_resource type="Texture2D" uid="uid://bdmrskl1k3l2q" path="res://assets/skills/fire/1/1_28.png" id="68_63x2c"]
[ext_resource type="Texture2D" uid="uid://bsgibw567usad" path="res://assets/skills/fire/1/1_29.png" id="69_arxfr"]
[ext_resource type="Texture2D" uid="uid://kxwghkup4qsh" path="res://assets/skills/fire/1/1_30.png" id="70_5ecds"]
[ext_resource type="Texture2D" uid="uid://l3e0rshktl8" path="res://assets/skills/fire/1/1_31.png" id="71_nssm8"]
[ext_resource type="Texture2D" uid="uid://wqrjiey1rvyb" path="res://assets/skills/fire/1/1_32.png" id="72_ei0bd"]
[ext_resource type="Texture2D" uid="uid://bnjlayl74c05d" path="res://assets/skills/fire/1/1_33.png" id="73_wwa77"]
[ext_resource type="Texture2D" uid="uid://ssbp0u5qes02" path="res://assets/skills/fire/1/1_34.png" id="74_tdwly"]
[ext_resource type="Texture2D" uid="uid://04pys4fv8ea0" path="res://assets/skills/fire/1/1_35.png" id="75_fmlco"]
[ext_resource type="Texture2D" uid="uid://d2qjuk4xup2sr" path="res://assets/skills/fire/1/1_36.png" id="76_duoik"]
[ext_resource type="Texture2D" uid="uid://dfrdmpi27nneh" path="res://assets/skills/fire/1/1_37.png" id="77_6qclm"]
[ext_resource type="Texture2D" uid="uid://py70s0f3xw1c" path="res://assets/skills/fire/1/1_38.png" id="78_mtkxs"]
[ext_resource type="Texture2D" uid="uid://bs6hgbcpcuiuc" path="res://assets/skills/fire/1/1_39.png" id="79_pxyg8"]
[ext_resource type="Texture2D" uid="uid://0o4gcbowj8cd" path="res://assets/skills/fire/1/1_40.png" id="80_xm1em"]
[ext_resource type="Texture2D" uid="uid://bg36xxqdv3ihy" path="res://assets/skills/fire/1/1_41.png" id="81_6ix8p"]
[ext_resource type="Texture2D" uid="uid://2khhstopkty2" path="res://assets/skills/fire/1/1_42.png" id="82_fntve"]
[ext_resource type="Texture2D" uid="uid://n4ubhtccujw1" path="res://assets/skills/fire/1/1_43.png" id="83_a2vma"]
[ext_resource type="Texture2D" uid="uid://40jk8l0laa7f" path="res://assets/skills/fire/1/1_44.png" id="84_b63cp"]
[ext_resource type="Texture2D" uid="uid://c3sh2nowo842j" path="res://assets/skills/fire/1/1_45.png" id="85_l2ov3"]
[ext_resource type="Texture2D" uid="uid://b01nvxb12byq7" path="res://assets/skills/fire/1/1_46.png" id="86_gdxup"]
[ext_resource type="Texture2D" uid="uid://crb22mwplu70p" path="res://assets/skills/fire/1/1_47.png" id="87_vbe6q"]
[ext_resource type="Texture2D" uid="uid://disyl0l30qnrl" path="res://assets/skills/fire/1/1_48.png" id="88_xkbl4"]
[ext_resource type="Texture2D" uid="uid://cvgfdnohvlpn5" path="res://assets/skills/fire/1/1_49.png" id="89_xfllp"]
[ext_resource type="Texture2D" uid="uid://p4idomfcgrlx" path="res://assets/skills/fire/1/1_50.png" id="90_qr5dr"]
[ext_resource type="Texture2D" uid="uid://ew2eito8atjj" path="res://assets/skills/fire/1/1_51.png" id="91_2t0dv"]
[ext_resource type="Texture2D" uid="uid://dccmjaikypbau" path="res://assets/skills/fire/1/1_52.png" id="92_xfwra"]
[ext_resource type="Texture2D" uid="uid://bjhwuyvba4bpt" path="res://assets/skills/fire/1/1_53.png" id="93_txs7c"]
[ext_resource type="Texture2D" uid="uid://2mlkodbdkfc3" path="res://assets/skills/fire/1/1_54.png" id="94_18o63"]
[ext_resource type="Texture2D" uid="uid://cip1u37j15fx3" path="res://assets/skills/fire/1/1_55.png" id="95_shj53"]
[ext_resource type="Texture2D" uid="uid://cypo7haouuvu0" path="res://assets/skills/fire/1/1_56.png" id="96_q38v6"]
[ext_resource type="Texture2D" uid="uid://cfpcm6t46d484" path="res://assets/skills/fire/1/1_57.png" id="97_r4og4"]
[ext_resource type="Texture2D" uid="uid://bwj5x3dlfght3" path="res://assets/skills/fire/1/1_58.png" id="98_hj3ni"]
[ext_resource type="Texture2D" uid="uid://d0eb3iv3ltgsi" path="res://assets/skills/fire/1/1_59.png" id="99_g0xte"]
[ext_resource type="Texture2D" uid="uid://bjv07uxcv7oir" path="res://assets/skills/fire/1/1_60.png" id="100_wnmj1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_am21h"]
shader = ExtResource("1_am21h")
shader_parameter/elemental_type = 0
shader_parameter/border_threshold = Vector2(0.1, 0.1)
shader_parameter/glow_intensity = 1.0
shader_parameter/alpha_threshold = 0.5
shader_parameter/color_tolerance = 0.2
shader_parameter/fire_target_1 = Color(0.5, 0.5, 0.5, 1)
shader_parameter/fire_replace_1 = Color(1, 0.3, 0, 1)
shader_parameter/fire_target_2 = Color(0.3, 0.3, 0.3, 1)
shader_parameter/fire_replace_2 = Color(0.8, 0.1, 0, 1)
shader_parameter/earth_target_1 = Color(0.5, 0.5, 0.5, 1)
shader_parameter/earth_replace_1 = Color(0.6, 0.5, 0.2, 1)
shader_parameter/earth_target_2 = Color(0.3, 0.3, 0.3, 1)
shader_parameter/earth_replace_2 = Color(0.561293, 0.426662, 0.158432, 1)
shader_parameter/water_target_1 = Color(0.5, 0.5, 0.5, 1)
shader_parameter/water_replace_1 = Color(0, 0.5, 1, 1)
shader_parameter/water_target_2 = Color(0.3, 0.3, 0.3, 1)
shader_parameter/water_replace_2 = Color(0, 0.2, 0.8, 1)
shader_parameter/fire_glow = Color(1, 0.5, 0, 1)
shader_parameter/earth_glow = Color(0.8, 0.6, 0.2, 1)
shader_parameter/water_glow = Color(0, 0.5, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_ge24q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6cv16")
}, {
"duration": 1.0,
"texture": ExtResource("3_j4nxn")
}, {
"duration": 1.0,
"texture": ExtResource("4_28m0y")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c35mf")
}, {
"duration": 1.0,
"texture": ExtResource("5_65viv")
}, {
"duration": 1.0,
"texture": ExtResource("6_x7c3f")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bjvpn")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_s7qer")
}, {
"duration": 1.0,
"texture": ExtResource("9_g4c7l")
}, {
"duration": 1.0,
"texture": ExtResource("10_knn7v")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_7pqkx")
}, {
"duration": 1.0,
"texture": ExtResource("12_uw77l")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_rptt4")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_r7pn3")
}, {
"duration": 1.0,
"texture": ExtResource("15_b8hi5")
}, {
"duration": 1.0,
"texture": ExtResource("16_2uvqg")
}, {
"duration": 1.0,
"texture": ExtResource("17_1s1yo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1scxs"]
shader = ExtResource("1_am21h")
shader_parameter/elemental_type = 0
shader_parameter/border_threshold = Vector2(0.003, 0.003)
shader_parameter/glow_intensity = 1.0
shader_parameter/alpha_threshold = 0.5
shader_parameter/color_tolerance = 0.2
shader_parameter/fire_target_1 = Color(0.5, 0.5, 0.5, 1)
shader_parameter/fire_replace_1 = Color(1, 0.3, 0, 1)
shader_parameter/fire_target_2 = Color(0.3, 0.3, 0.3, 1)
shader_parameter/fire_replace_2 = Color(0.8, 0.1, 0, 1)
shader_parameter/earth_target_1 = Color(0.5, 0.5, 0.5, 1)
shader_parameter/earth_replace_1 = Color(0.6, 0.5, 0.2, 1)
shader_parameter/earth_target_2 = Color(0.3, 0.3, 0.3, 1)
shader_parameter/earth_replace_2 = Color(0.4, 0.3, 0.1, 1)
shader_parameter/water_target_1 = Color(0.5, 0.5, 0.5, 1)
shader_parameter/water_replace_1 = Color(0, 0.5, 1, 1)
shader_parameter/water_target_2 = Color(0.3, 0.3, 0.3, 1)
shader_parameter/water_replace_2 = Color(0, 0.2, 0.8, 1)
shader_parameter/fire_glow = Color(1, 0.5, 0, 1)
shader_parameter/earth_glow = Color(0.8, 0.6, 0.2, 1)
shader_parameter/water_glow = Color(0, 0.5, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_t1aof"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6cv16")
}, {
"duration": 1.0,
"texture": ExtResource("3_j4nxn")
}, {
"duration": 1.0,
"texture": ExtResource("4_28m0y")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_genst")
}, {
"duration": 1.0,
"texture": ExtResource("20_niom3")
}, {
"duration": 1.0,
"texture": ExtResource("21_ttakn")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_rw8a5")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_iwuka")
}, {
"duration": 1.0,
"texture": ExtResource("24_hyqqp")
}, {
"duration": 1.0,
"texture": ExtResource("25_ds1xl")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_1u1sw")
}, {
"duration": 1.0,
"texture": ExtResource("27_2t3bg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_jrbya")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_ahqnk")
}, {
"duration": 1.0,
"texture": ExtResource("30_vb1ce")
}],
"loop": false,
"name": &"jump attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_0ncpa")
}, {
"duration": 1.0,
"texture": ExtResource("32_upxxc")
}, {
"duration": 1.0,
"texture": ExtResource("33_ln3h3")
}, {
"duration": 1.0,
"texture": ExtResource("34_uygh0")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_5vumi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tbddh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_kfile")
}, {
"duration": 1.0,
"texture": ExtResource("41_pkjeu")
}, {
"duration": 1.0,
"texture": ExtResource("42_0epl4")
}, {
"duration": 1.0,
"texture": ExtResource("43_3r8w6")
}, {
"duration": 1.0,
"texture": ExtResource("44_i816j")
}, {
"duration": 1.0,
"texture": ExtResource("45_laqvq")
}, {
"duration": 1.0,
"texture": ExtResource("46_aq51r")
}, {
"duration": 1.0,
"texture": ExtResource("47_q3ejk")
}, {
"duration": 1.0,
"texture": ExtResource("48_2dxln")
}, {
"duration": 1.0,
"texture": ExtResource("49_gsldg")
}, {
"duration": 1.0,
"texture": ExtResource("50_rrrpt")
}, {
"duration": 1.0,
"texture": ExtResource("51_us45u")
}, {
"duration": 1.0,
"texture": ExtResource("52_wvv85")
}, {
"duration": 1.0,
"texture": ExtResource("53_hxu4r")
}, {
"duration": 1.0,
"texture": ExtResource("54_i6dto")
}, {
"duration": 1.0,
"texture": ExtResource("55_4d8j4")
}, {
"duration": 1.0,
"texture": ExtResource("56_s27sh")
}, {
"duration": 1.0,
"texture": ExtResource("57_1vi86")
}, {
"duration": 1.0,
"texture": ExtResource("58_beayq")
}, {
"duration": 1.0,
"texture": ExtResource("59_12j61")
}, {
"duration": 1.0,
"texture": ExtResource("60_kthys")
}, {
"duration": 1.0,
"texture": ExtResource("61_48o5h")
}, {
"duration": 1.0,
"texture": ExtResource("62_xum3i")
}, {
"duration": 1.0,
"texture": ExtResource("63_ct4wv")
}, {
"duration": 1.0,
"texture": ExtResource("64_teg5g")
}, {
"duration": 1.0,
"texture": ExtResource("65_vcxk4")
}, {
"duration": 1.0,
"texture": ExtResource("66_x6bw1")
}, {
"duration": 1.0,
"texture": ExtResource("67_e1bru")
}, {
"duration": 1.0,
"texture": ExtResource("68_63x2c")
}, {
"duration": 1.0,
"texture": ExtResource("69_arxfr")
}, {
"duration": 1.0,
"texture": ExtResource("70_5ecds")
}, {
"duration": 1.0,
"texture": ExtResource("71_nssm8")
}, {
"duration": 1.0,
"texture": ExtResource("72_ei0bd")
}, {
"duration": 1.0,
"texture": ExtResource("73_wwa77")
}, {
"duration": 1.0,
"texture": ExtResource("74_tdwly")
}, {
"duration": 1.0,
"texture": ExtResource("75_fmlco")
}, {
"duration": 1.0,
"texture": ExtResource("76_duoik")
}, {
"duration": 1.0,
"texture": ExtResource("77_6qclm")
}, {
"duration": 1.0,
"texture": ExtResource("78_mtkxs")
}, {
"duration": 1.0,
"texture": ExtResource("79_pxyg8")
}, {
"duration": 1.0,
"texture": ExtResource("80_xm1em")
}, {
"duration": 1.0,
"texture": ExtResource("81_6ix8p")
}, {
"duration": 1.0,
"texture": ExtResource("82_fntve")
}, {
"duration": 1.0,
"texture": ExtResource("83_a2vma")
}, {
"duration": 1.0,
"texture": ExtResource("84_b63cp")
}, {
"duration": 1.0,
"texture": ExtResource("85_l2ov3")
}, {
"duration": 1.0,
"texture": ExtResource("86_gdxup")
}, {
"duration": 1.0,
"texture": ExtResource("87_vbe6q")
}, {
"duration": 1.0,
"texture": ExtResource("88_xkbl4")
}, {
"duration": 1.0,
"texture": ExtResource("89_xfllp")
}, {
"duration": 1.0,
"texture": ExtResource("90_qr5dr")
}, {
"duration": 1.0,
"texture": ExtResource("91_2t0dv")
}, {
"duration": 1.0,
"texture": ExtResource("92_xfwra")
}, {
"duration": 1.0,
"texture": ExtResource("93_txs7c")
}, {
"duration": 1.0,
"texture": ExtResource("94_18o63")
}, {
"duration": 1.0,
"texture": ExtResource("95_shj53")
}, {
"duration": 1.0,
"texture": ExtResource("96_q38v6")
}, {
"duration": 1.0,
"texture": ExtResource("97_r4og4")
}, {
"duration": 1.0,
"texture": ExtResource("98_hj3ni")
}, {
"duration": 1.0,
"texture": ExtResource("99_g0xte")
}, {
"duration": 1.0,
"texture": ExtResource("100_wnmj1")
}],
"loop": true,
"name": &"Fire",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gp0ck"]
radius = 19.0263

[sub_resource type="PackedScene" id="PackedScene_j7oln"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(2, 0, 11, 10, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("Projectile", "collision_layer", "script", "Area2D", "AnimatedSprite2D", "sprite_frames", "animation", "VisibleOnScreenNotifier2D", "CollisionShape2D", "shape", "_on_visible_on_screen_notifier_2d_screen_exited", "screen_exited"),
"node_count": 4,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 3, 0, -1, 2, 1, 0, 2, 1, 0, 0, 0, 4, 4, -1, 2, 5, 2, 6, 3, 0, 0, 0, 7, 7, -1, 0, 0, 0, 0, 8, 8, -1, 1, 9, 4, 0),
"variants": [32, SubResource("GDScript_5vumi"), SubResource("SpriteFrames_tbddh"), &"Fire", SubResource("CircleShape2D_gp0ck")],
"version": 3
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_niom3"]
size = Vector2(17, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8qe1"]
size = Vector2(15.3181, 31.9904)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_genst"]
radius = 7.0
height = 28.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_wodsf")
elemental_type = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -61)
zoom = Vector2(2, 2)

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
material = SubResource("ShaderMaterial_am21h")
position = Vector2(-4, -15)
sprite_frames = SubResource("SpriteFrames_ge24q")
animation = &"idle"

[node name="BladeAnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
visible = false
material = SubResource("ShaderMaterial_1scxs")
position = Vector2(-1, -15)
sprite_frames = SubResource("SpriteFrames_t1aof")
animation = &"jump attack"
autoplay = "idle"

[node name="BladeFactory" type="Marker2D" parent="Direction"]
position = Vector2(9, -14)
script = ExtResource("37_iwuka")
product_packed_scene = ExtResource("38_hyqqp")
target_container_name = &"Blade"
metadata/_custom_type_script = "uid://b2o007yxvk7qa"

[node name="JumpFXFactory" type="Marker2D" parent="Direction"]
position = Vector2(0, -8)
script = ExtResource("37_iwuka")
product_packed_scene = ExtResource("37_k00gf")
target_container_name = &"Jump"
metadata/_custom_type_script = "uid://b2o007yxvk7qa"

[node name="WalkFXFactory" type="Marker2D" parent="Direction"]
position = Vector2(-8, -2)
script = ExtResource("37_iwuka")
product_packed_scene = ExtResource("38_48wxx")
target_container_name = &"WalkFX"
metadata/_custom_type_script = "uid://b2o007yxvk7qa"

[node name="SkillFactory" type="Marker2D" parent="Direction"]
position = Vector2(15, -14)
script = ExtResource("37_iwuka")
product_packed_scene = SubResource("PackedScene_j7oln")
target_container_name = &"Skill"
metadata/_custom_type_script = "uid://b2o007yxvk7qa"

[node name="HurtArea2D" type="Area2D" parent="Direction"]
collision_layer = 4
script = ExtResource("35_o1e43")
metadata/_custom_type_script = "uid://csu2b21cwchqw"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtArea2D"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_niom3")

[node name="HitArea2D" type="Area2D" parent="Direction"]
collision_mask = 16
script = ExtResource("17_ioxgp")
metadata/_custom_type_script = "uid://ccpqtop0obu2w"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D"]
position = Vector2(24, -14)
rotation = 0.785398
shape = SubResource("RectangleShape2D_w8qe1")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_genst")

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource("39_art4l")

[node name="Run" type="Node" parent="States"]
script = ExtResource("40_fjxoa")

[node name="Jump" type="Node" parent="States"]
script = ExtResource("41_gswnw")

[node name="Fall" type="Node" parent="States"]
script = ExtResource("42_xcnuv")

[node name="Hurt" type="Node" parent="States"]
script = ExtResource("20_8ydkj")

[node name="Dead" type="Node" parent="States"]
script = ExtResource("22_yj68g")

[node name="Attack" type="Node" parent="States"]
script = ExtResource("43_niom3")

[node name="JumpAttack" type="Node" parent="States"]
script = ExtResource("44_ttakn")

[node name="ThrowAttack" type="Node" parent="States"]
script = ExtResource("45_rw8a5")

[node name="CastSpell" type="Node" parent="States"]
script = ExtResource("51_jrbya")

[node name="Blade" type="Node" parent="."]

[node name="Jump" type="Node" parent="."]

[node name="WalkFX" type="Node" parent="."]

[node name="Skill" type="Node" parent="."]

[connection signal="hurt" from="Direction/HurtArea2D" to="." method="_on_hurt_area_2d_hurt"]
